added profanity filter

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "profanity-filter": "^0.2.1",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
