--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,9 @@
 {
   "development": {
-    "use_env_variable": "LOCALDB",
+    "username": "root",
+    "password": "asdf1234",
+    "database": "mma_db",
+    "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
