fixed added user age in json response from /api/user_data, fixed login in html files by adding commonFunctions.js links

--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
   "development": {
-   
+    "use_env_variable": "LOCALDB",
     "username": "root",
     "password": "Nicky0416!",
     "database": "mma_db",
