--- a/config/config.json
+++ b/config/config.json
@@ -7,6 +7,13 @@
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
+  "sergeyPC": {
+    "username": "root",
+    "password": "asdf1234",
+    "database": "mma_db",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
   "test": {
     "username": "root",
     "password": null,
