--- a/config/config.json
+++ b/config/config.json
@@ -2,9 +2,9 @@
   "development": {
     "use_env_variable": "LOCALDB"
   },
-  "sergeyPC": {
+  "nicksPC": {
     "username": "root",
-    "password": "asdf1234",
+    "password": "Nicky0416!",
     "database": "mma_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
