--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "moment": "^2.27.0",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.3.5"
   },
